Added the Reference CloudType instead of just using the entries. Needed this for last-writer semantics.

--- a/examples/test/client/index.html
+++ b/examples/test/client/index.html
@@ -78,6 +78,9 @@
 
 
                     </td>
+                    <td>
+                      <a href="#" ng-click="deleteRow(row)"><span class="glyphicon glyphicon-remove" id="edittaskdelete"></span></a> 
+                    </td>
                   </tr>
                 </tbody>
                 
