--- a/examples/test/client/index.html
+++ b/examples/test/client/index.html
@@ -68,7 +68,7 @@
                      <form role=form class='form-inline edit' ng-submit="setProperty(cloudtype, newValue)">
                       <div class='form-group'>
                         <div class=input-group>
-                          <input type='number' test-focus="editing == cloudtype" ng-model="newValue" ng-init="newValue = cloudtype.toString()" class='form-control' placeholder='Value'>
+                          <input type='typeToInput(cloudtype)' test-focus="editing == cloudtype" ng-model="newValue" ng-init="newValue = cloudtype.toString()" class='form-control' placeholder='Value'>
                         </div>
                       </div>
                       <div class=form-group>
